--- a/src/styles/Header.module.css
+++ b/src/styles/Header.module.css
@@ -5,7 +5,7 @@
   background-color: var(--color-primary);
   padding: var(--spacing-s) 0;
   box-shadow: var(--shadow-m);
-  z-index: 1;
+  z-index: 10;
 }
 .header__container {
   display: flex;
